--- a/appendix_b.tex
+++ b/appendix_b.tex
@@ -4,20 +4,20 @@
 \section {Datasets}
 \label{appendix_b}
 
-{\red 
 \begin{itemize}
 \item 
-  Definition of the datasets used for this study ant the book-keeping information
+  Definition of the datasets used for this study and the book-keeping information
   can be found at \\
-  \href{https://github.com/sridhar130/pipenu}{https://github.com/sridhar130/pipenu}.
+  \href{https://github.com/sridhar130/pipenu/blob/main/doc/datasets.org}
+  {\blue https://github.com/sridhar130/pipenu/blob/main/doc/datasets.org}.
 \item
-  the datasets and stntuples are available from {\bf /exp/mu2e/data/projects/pipenu}
+  the datasets and stntuples are available from {\bf mu2egpvm*:/exp/mu2e/data/projects/pipenu}
 \item
   location of the stntuple catalogs : \\
   \href{https://mu2e.fnal.gov/public/hep/computing/Stntuple/cafdfc/pipenu/index.shtml}
-  {https://mu2e.fnal.gov/public/hep/computing/Stntuple/cafdfc/pipenu/index.shtml}
+  {\blue https://mu2e.fnal.gov/public/hep/computing/Stntuple/cafdfc/pipenu/index.shtml}
 \end{itemize}
-}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
