- version for teh internal review

--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -147,19 +147,16 @@
 
 \begin{itemize}
 \item
-  v1.01: inital version
+  v1.01: version for internal review
 \end{itemize}
 
-{\red
-TODO items:
-
-\begin{itemize}
-\item
-  check section names
-\item
-  describe datasets
-\end{itemize}
-}
+% {\red
+% TODO items:
+% 
+% \begin{itemize}
+% \item
+% \end{itemize}
+% }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section {Introduction}
